--- a/ios/wild5/Base.lproj/LaunchScreen.xib
+++ b/ios/wild5/Base.lproj/LaunchScreen.xib
@@ -15,18 +15,14 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Powered by React Native" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="8ie-xW-0ye" userLabel="Built by Wild Card">
-                    <rect key="frame" x="20" y="626" width="335" height="21"/>
+                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="8ie-xW-0ye" userLabel="Built by Wild Card">
+                    <rect key="frame" x="20" y="647" width="335" height="0.0"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="wild-5-logo-r-color" translatesAutoresizingMaskIntoConstraints="NO" id="Dho-h1-z01">
-                    <rect key="frame" x="8" y="84" width="359" height="214"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                </imageView>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="wild5star" translatesAutoresizingMaskIntoConstraints="NO" id="GLl-lE-vCk">
-                    <rect key="frame" x="67" y="328" width="240" height="128"/>
+                    <rect key="frame" x="8" y="96" width="359" height="214"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 </imageView>
             </subviews>
@@ -42,6 +38,5 @@
     </objects>
     <resources>
         <image name="wild-5-logo-r-color" width="289" height="56.5"/>
-        <image name="wild5star" width="150" height="142.5"/>
     </resources>
 </document>
